// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSaturation accepts a color 1`] = `
<div
  aria-label="aria-label"
  class="euiSaturation testClass1 testClass2 emotion-euiSaturation-euiTestCss"
  data-test-subj="test subject string"
  style="background: rgb(0, 255, 255);"
  tabindex="-1"
>
  <div
    class="euiSaturation__lightness emotion-euiSaturation__lightness"
  >
    <div
      class="euiSaturation__saturation emotion-euiSaturation__saturation"
    />
  </div>
  <span
    class="euiToolTipAnchor  emotion-euiToolTipAnchor-inlineBlock-euiSaturation__tooltip"
    style="inset-inline-start: 0; inset-block-start: 0;"
  >
    <button
      aria-describedby="generated-id-instructions"
      aria-label="Select a color"
      aria-roledescription="HSV color mode saturation and value 2-axis slider."
      class="euiSaturation__indicator emotion-euiSaturation__indicator"
      id="generated-id-saturationIndicator"
    />
  </span>
  <span
    hidden=""
    id="generated-id-instructions"
  >
    Arrow keys to navigate the square color gradient. Coordinates will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right to change the saturation. Up and down change the value.
  </span>
</div>
`;

exports[`EuiSaturation is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiSaturation testClass1 testClass2 emotion-euiSaturation-euiTestCss"
  data-test-subj="test subject string"
  style="background: rgb(255, 4, 0);"
  tabindex="-1"
>
  <div
    class="euiSaturation__lightness emotion-euiSaturation__lightness"
  >
    <div
      class="euiSaturation__saturation emotion-euiSaturation__saturation"
    />
  </div>
  <span
    class="euiToolTipAnchor  emotion-euiToolTipAnchor-inlineBlock-euiSaturation__tooltip"
    style="inset-inline-start: 0; inset-block-start: 0;"
  >
    <button
      aria-describedby="generated-id-instructions"
      aria-label="Select a color"
      aria-roledescription="HSV color mode saturation and value 2-axis slider."
      class="euiSaturation__indicator emotion-euiSaturation__indicator"
      id="generated-id-saturationIndicator"
    />
  </span>
  <span
    hidden=""
    id="generated-id-instructions"
  >
    Arrow keys to navigate the square color gradient. Coordinates will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right to change the saturation. Up and down change the value.
  </span>
</div>
`;
